--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
-    <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
     <title>Navantis</title>
 </head>
 <body>
-    <div class="container-principal"></div>
+    <div class="container-principal">
+        
+    </div>
 </body>
 </html>
