Inicializando a tela de login

--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/style-login.css">
     <link rel="stylesheet" href="estilos/media-query.css">
-    <title>Navantis</title>
+    <title>Navantis | Login</title>
 </head>
 <body>
     <div class="container-principal">
-        
+        <h1>Acesse sua conta</h1>
+        <form action="login.php" method="POST" autocomplete="off">
+            <p><label for="email">Email:</label>
+                <input type="email" name="em" id="email"></p>
+
+            <p><label for="senha">Senha:</label>
+                <input type="password" name="se" id="senha"></p>
+        </form>
     </div>
 </body>
 </html>
